[project]
name = "pyaldata"
version = "0.2.1"
description = "Python implementation of TrialData, a library for simplifying the analysis of trial-based data from neuroscience experiments"
authors = [
    { name = "Matt Perich" },
    { name = "Catia Fortunato" },
    { name = "Raeed Chowdhury" },
    { name = "Bence Bagi" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "mat73>=0.63",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaldata"]

[tool.black]
line_length = 92

[tool.ruff]
line-length = 92

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
multi_line_output = 3
line_length = 92
include_trailing_comma = true
