[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyaldata"
version = "0.2.2"
description = "Python implementation of TrialData, a library for simplifying the analysis of trial-based data from neuroscience experiments"
authors = [
    { name = "Matt Perich" },
    { name = "Catia Fortunato" },
    { name = "Raeed Chowdhury" },
    { name = "Bence Bagi" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "mat73>=0.63",
]

[tool.hatch.build.targets.wheel]
packages = ["pyaldata"]
